<resources>
    <string name="app_name">Perfume</string>
    <string name="detail">Product Details</string>
    <string name="productName">Falgies Parfume</string>
    <string name="price">$324.00</string>
    <string name="currentVolume">Volume 70ml</string>
    <string name="volumeSelect">Volume Pack</string>
    <string name="vol1">250g</string>
    <string name="vol2">500g</string>
    <string name="vol3">750g</string>
    <string name="vol4">1kg</string>
    <string name="descName">Description</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a pellentesque lacus. Etiam tristique nisi tellus, eget cursus ligula imperdiet at. Morbi consectetur libero... Read more </string>
    <string name="swipe">Swipe to get started</string>
</resources>